fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,20 @@
 .projects,
 .contact,
 .main {
-  height: 100vh; /* Set the height to 100% of the viewport height */
+  height: 100vh;
   background-color: rgba(238,238,238,255);
   color: #444444;
+  border-top: none; /* Remove the top border */
 }
+
+.main {
+  text-align: left;
+  font-family: 'Source Code Pro';
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(238,238,238,255); /* Set the same background color as other sections */
+}
+
 
 .about {
   text-align: right;
@@ -78,7 +88,6 @@
 
 
 .about-container {
-  height: 70vh; /* Set the height to 70% of the viewport height */
   display: flex;
   flex-direction: column;
   font-size: 50px;
@@ -105,6 +114,7 @@
 
 .link {
   text-decoration: none;
+  margin-right: 5px;
   display: inline;
   padding: 10px 10px;
   font-size: large;
@@ -113,34 +123,15 @@
   align-items: right;
 }
 
-#a, #b {
-  font-size: 17px;
-}
-
-#c {
-  margin-right: 40px;
-  font-size: 17px;
-}
-
-.main {
-  top: 0; /* set top to 0 to keep it at the top */
-  z-index: -1; /* set z-index to a lower value than other sections */
-  text-align: left;
-  font-family: 'Source Code Pro';
-  width: 100%; /* set width to 100% */
-  overflow: auto; /* enable scrolling if necessary */
-}
-
 .projects {
-  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom:-10%;
 }
 
 .projects-text {
   font-size: 2rem;
-  max-width: 50%;
   text-align: right;
   padding-right: 50px;
 }
@@ -151,7 +142,7 @@
 }
 
 .contact-smaller {
-  padding-top: 20%;
+  margin-top: 10%;
   font-size: 45px;
 }
 
